# ocr_hooks

./: README.md  pyproject.toml
ocr_hooks/hooks/: hook-ddddocr.py  hook-onnxruntime.py
