[project]
name = "ocr-hooks"
version = "2025.8.4.1"
description = "pyinstaller hooks for ddddocr and onnxruntime"
readme = "README.md"
authors = [
    { name = "Maple", email = "wjxa20152015@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ddddocr>=1.3.6",
    "onnxruntime==1.20.0",
    "pyinstaller>=6.2.0",
]

[project.scripts]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[project.entry-points."pyinstaller40"]
hook-dirs = "ocr_hooks._pyinstaller:get_hook_dirs"
